2005-05-01  Kazuhiko  <kazuhiko@fdiary.net>
	* category.rb (category_list_sections): fix a bug in an image url.

2005-04-28  ishinao <ishinao at ishinao.net>
	* highlight.rb: set subtitle into title element.

2005-04-21  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: fix a typo. not set @ignore_parser_cache.

2005-04-21 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb, windex.rb: remove setting of $KCODE.
	* recent_comment3.rb, recent_trackback3.rb: return emprty string.

2005-04-16  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: never set $KCODE.

2005-04-14 zunda <zunda at freeshell.org>
	* disp_referrer.rb, */disp_referrer.rb: better handle ignore_urls

2005-04-14  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: new plugin.

2005-04-08 TADA Tadashi <sho@spc.gr.jp>
	* append-css.rb: not apply in configuration mode.

2005-03-16 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: last section focused in default.

2005-03-10 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: add some error check and bug fix. thanks Yutaka Oiwa <yutaka at oiwa.jp>.
	* image.rb: add new option "image.maxwidth", thanks Masaru Yokoi <masaru at masaru.org>.

2005-03-09 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: remove debug print.

2005-03-09 TAHARA Shunichi <jado at flowernet.gr.jp>
	* calendar2.rb: escape quote in subtitle.

2005-03-03 zunda <zunda at freeshell.org>
	* disp_referrer.rb: handle rush conditions more properly when removing cache

2005-03-02  Tatsuki Sugiura <sugi@nemui.org>
	* tb-show.rb, ja/tb-show.rb, en/tb-show.rb: trackbacks_of_today_short is now selectable when in non-BlogKit mode from the config page

2005-02-28 zunda <zunda at freeshell.org>
	* disp_referrer.rb: handle rush conditions properly when removing cache

2005-02-21 zunda <zunda at freeshell.org>
	* disp_referrer.rb: debug code removed
	* disp_referrer.rb, {ja,en,zh}/disp_referrer.rb: configurable cache size
	* zh/disp_referrer.rb: sync with the en resource

2005-02-20 zunda <zunda at freeshell.org>